<resources>
    <string name="app_name">Overtracker</string>
    <string name="api_base_url">https://overtracker-api.herokuapp.com</string>
    <string name="database_name">overtracker-db</string>
    <string name="title_activity_hero">Hero Information</string>
    <string name="add_player_failed">Failed to add player.</string>
    <string name="player_added">Player added!</string>
    <string name="second">second</string>
    <string name="minute">minute</string>
    <string name="hour">hour</string>
    <string name="day">day</string>
    <string name="week">week</string>
    <string name="month">month</string>
    <string name="year">year</string>
    <string name="ago">ago</string>
    <string name="could_not_load_feed">Could not load feed, please try again…</string>
    <string name="login_success">Login Succeeded!</string>
    <string name="login_failed">Login Failed, please try again…</string>
    <string name="logged_out">Logged Out.</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="loading">Loading…</string>
    <string name="register_btag">If the BattleTag isn\'t already registered, we will keep track of it from now on.</string>
    <string name="example_btag">CoolDinosaur#12345</string>
    <string name="add">Add</string>
    <string name="follow_player">Follow Player</string>
    <string name="main_hero">Main Hero</string>
    <string name="endorsement">Endorsement</string>
    <string name="example_time">305.78H</string>
    <string name="example_hero">Wrecking Ball  </string>
    <string name="win_rate">Win Rate</string>
    <string name="damage">Damage</string>
    <string name="support">Support</string>
    <string name="tank">Tank</string>
    <string name="game_time">Game Time</string>
    <string name="login_bnet">Login With Battle.net</string>
    <string name="players">Players</string>
    <string name="following">Following</string>
    <string name="trending">Trending</string>
    <string name="heroes">Heroes</string>
    <string name="difficulty">DIFFICULTY</string>
    <string name="example_lore">Toting twin pulse pistols, energy-based time bombs, and rapid-fire banter, Tracer is able to blinkthrough space and rewind her personal timeline as she battles to right wrongs the world over.</string>
    <string name="story">Story</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="location_denied">Unable to update user\'s location</string>
    <string name="most_played_region">Top regions</string>
    <string name="load_map_failed">Failed to load map locations</string>
    <string name="region_most_played">Region in which this hero is most played</string>
</resources>
