<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id = "@+id/btGlobal"
        android:icon = "@drawable/trending"
        android:title = "@string/trending"
        />
    <item
        android:id = "@+id/btLocal"
        android:icon = "@drawable/following"
        android:title = "@string/following"
        />
    <item
        android:id = "@+id/btFollowing"
        android:icon = "@drawable/players"
        android:title = "@string/players"
        />
    <item
        android:id = "@+id/btHeroes"
        android:icon = "@drawable/heroes"
        android:title = "@string/heroes"
        />
    <item
        android:id = "@+id/btChat"
        android:icon = "@drawable/training_bot"
        android:title = "@string/chat"
        />
</menu>