<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="90dp"
    android:layout_height="155dp"
    android:layout_marginStart="3dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="3dp"
    android:layout_marginBottom="5dp"
    android:layout_weight="1"
    android:background="#FFFFFF"
    android:backgroundTint="#4C4C4C"
    app:cardBackgroundColor="#FFFFFF"
    app:cardCornerRadius="5dp">

    <ImageView
        android:id="@+id/ivHeroPortrait"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/main_hero"
        app:srcCompat="@drawable/ana_portrait" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvHeroName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/bignoodletoo"
            android:gravity="center"
            android:text="@string/example_hero"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/ivHeroRole"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/damage"
            app:srcCompat="@drawable/support" />
    </LinearLayout>

</androidx.cardview.widget.CardView>