<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="380dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".view.fragment.PlayerStatsFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="1"
        app:cardBackgroundColor="#1c1c1c"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btFollow"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="bottom|end"
                    android:clickable="true"
                    android:focusable="true"
                    app:backgroundTint="@color/colorPrimary"
                    app:fabCustomSize="40dp"
                    app:layout_constraintBottom_toBottomOf="@+id/srlFeedLocal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:maxImageSize="40dp"
                    app:srcCompat="@drawable/follow" />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="#00FFFFFF">

                    <ImageView
                        android:id="@+id/ivInfoPortrait"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/thumb" />
                </androidx.cardview.widget.CardView>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvInfoTag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="-10dp"
                    android:fontFamily="@font/bignoodletoo"
                    android:text="aaaaaaaaaaaa "
                    android:textAlignment="textStart"
                    android:textColor="@color/colorPrimary"
                    android:textSize="42sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias=".1"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    tools:layout_editor_absoluteY="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvInfoPlatform"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="XBL"
                        android:textAlignment="viewStart"
                        android:textColor="@color/colorDetail"
                        android:textSize="31sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvInfoTagNum"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/bignoodletoo"
                        android:text="#55555"
                        android:textColor="@color/colorDetail"
                        android:textSize="30sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias=".1"
                        app:layout_constraintStart_toEndOf="@+id/imageView3"
                        tools:layout_editor_absoluteY="20dp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvInfoCurrentTank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/bignoodletoo"
                android:text="3481 "
                android:textAlignment="textEnd"
                android:textColor="@color/colorPrimary"
                android:textSize="35sp" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/tank"
                android:tint="@color/colorDetail"
                app:srcCompat="@drawable/tank" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvInfoCurrentSupport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/bignoodletoo"
                android:text="1400 "
                android:textAlignment="textEnd"
                android:textColor="@color/colorPrimary"
                android:textSize="35sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/support"
                android:tint="@color/colorDetail"
                app:srcCompat="@drawable/support" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvInfoCurrentDamage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/bignoodletoo"
                android:text="4925 "
                android:textAlignment="textEnd"
                android:textColor="@color/colorPrimary"
                android:textSize="35sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/damage"
                android:tint="@color/colorDetail"
                app:srcCompat="@drawable/damage" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorDetail" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/main_hero"
                android:textAlignment="viewStart"
                android:textColor="@color/colorDetail"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivInfoMainRole"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:tint="@color/colorDetail"
                    app:srcCompat="@drawable/damage" />

                <TextView
                    android:id="@+id/tvInfoMain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-5dp"
                    android:layout_weight="0"
                    android:fontFamily="@font/bignoodletoo"
                    android:text="@string/example_hero"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorPrimary"
                    android:textSize="35sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="-5dp"
                        android:layout_weight="0"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/game_time"
                        android:textAlignment="viewStart"
                        android:textColor="@color/colorDetail"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvInfoMainTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/bignoodletoo"
                        android:text="@string/example_time"
                        android:textAlignment="viewStart"
                        android:textColor="@color/colorPrimary"
                        android:textSize="30dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="-5dp"
                        android:layout_weight="0"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/endorsement"
                        android:textAlignment="viewStart"
                        android:textColor="@color/colorDetail"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/ivInfoEndorsement"
                        android:layout_width="40dp"
                        android:layout_height="10dp"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/endorsement"
                        android:tint="@color/colorPrimary"
                        app:srcCompat="@drawable/endorsement_4" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0"
            app:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/ivInfoMain"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_weight="0"
                android:background="@color/colorDetail"
                android:contentDescription="@string/main_hero"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ana_portrait" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>