<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00000000"
    android:theme="@style/AppTheme.CustomTheme">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:theme="@style/AppTheme.CustomTheme"
        app:cardBackgroundColor="#D3CFCF"
        app:cardCornerRadius="25dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/etBattletag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="42dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="42dp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:ems="10"
                    android:fontFamily="sans-serif-black"
                    android:hint="@string/example_btag"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorDetail"
                    android:textColorLink="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etEmail" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/register_btag"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="italic" />

                <Button
                    android:id="@+id/btAddBattletag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/add"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorLink="@color/colorPrimary"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toTopOf="@+id/btSignUp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/followLoadingContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#A3000000"
                android:clickable="true"
                android:focusable="true"
                android:translationZ="100dp"
                android:visibility="gone">

                <ProgressBar
                    android:id="@+id/progressBar2"
                    style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFFFFF"
                    android:indeterminateTint="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>